# githubinformer

./: MANIFEST.in  README.md  app.py  setup.cfg  setup.py
githubinformer/: __init__.py  github_informer.py
